# project-l-backend

./: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/seeds/: seed.sql
alembic/versions/: a7fda4ce8a79_initial_schema.py
app/: constants.py  main.py
app/db/: session.py
app/db/models/: __init__.py  ability_model.py  pokemon_ability_model.py  pokemon_model.py
app/repositories/: ability_repository.py  pokemon_repository.py
app/routers/: ability_router.py  pokemon_router.py  pokemot_router.py
app/schemas/: ability_schema.py  base_schema.py  common.py  effect_schema.py  pokemon_schema.py
app/services/: ability_service.py  pokemon_service.py
app/utils/: helpers.py  pagination.py
backend/: Dockerfile
backend/alembic/versions/: 931d521607a6_initial_schema.py  b8fda4ce8a80_seed_pokemon_data.py
backend/app/: db.py  models.py  schemas.py
backend/scripts/: entrypoint.sh
scripts/: entrypoint.sh
