[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "fastapi==0.133.0",
    "pydantic==2.12.5",
    "sqlalchemy==2.0.47",
    "uvicorn[standard]==0.41.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.6",
    "pre-commit==4.5.1",
]
