[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "fastapi==0.133.0",
    "pydantic==2.12.5",
    "sqlalchemy==2.0.47",
    "uvicorn[standard]==0.41.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.8",
    "pre-commit==4.5.1",
]

[tool.ruff]
line-length = 88          # Match Black's default
target-version = "py312"
src = ["app"]    # Help Ruff resolve first-party imports

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear (catches common bugs)
    "C4",   # flake8-comprehensions (cleaner list/dict comprehensions)
    "UP",   # pyupgrade (modernize syntax)
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long — handled by formatter
    "B008",   # Do not perform function calls in default args (common in FastAPI)
]
unfixable = ["B"]   # Bugbear fixes can be destructive — review manually

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
